--- a/configs/downloader/service.yaml
+++ b/configs/downloader/service.yaml
@@ -1,23 +1,75 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: qbittorrent
+  name: radarr-lb
   namespace: media
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: "192.168.71.14"    
+    external-dns.alpha.kubernetes.io/hostname: "radarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+  labels:
+    app: radarr
 spec:
+  selector:
+    app: radarr
   ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
-  # No selector needed as we're using custom endpoints
+    - port: 7878
+      targetPort: 7878
+      protocol: TCP
+      name: web
+    - port: 443
+      targetPort: 7878
+      protocol: TCP
+      name: https
+  type: LoadBalancer
 ---
 apiVersion: v1
-kind: Endpoints
+kind: Service
 metadata:
-  name: qbittorrent
+  name: sonarr-lb
   namespace: media
-subsets:
-  - addresses:
-    - ip: 192.168.68.64  # The IP address of your host running Docker Compose
-    ports:
-    - port: 8080
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: "192.168.71.15"    
+    external-dns.alpha.kubernetes.io/hostname: "sonarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+  labels:
+    app: sonarr
+spec:
+  selector:
+    app: sonarr
+  ports:
+    - port: 8989
+      targetPort: 8989
+      protocol: TCP
       name: web
+    - port: 443
+      targetPort: 8989
+      protocol: TCP
+      name: https
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prowlarr-lb
+  namespace: media
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: "192.168.71.16"    
+    external-dns.alpha.kubernetes.io/hostname: "prowlarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+  labels:
+    app: prowlarr
+spec:
+  selector:
+    app: prowlarr
+  ports:
+    - port: 9696
+      targetPort: 9696
+      protocol: TCP
+      name: web
+    - port: 443
+      targetPort: 9696
+      protocol: TCP
+      name: https
+  type: LoadBalancer
