--- a/configs/downloader/prowlarr.yaml
+++ b/configs/downloader/prowlarr.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prowlarr
-  namespace: media
+  namespace: downloader
 spec:
   replicas: 1
   selector:
@@ -48,7 +48,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prowlarr
-  namespace: media
+  namespace: downloader
   labels:
     app: prowlarr
 spec:
