--- a/configs/downloader/pvc.yaml
+++ b/configs/downloader/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sonarr-config-pvc
-  namespace: media
+  namespace: downloader
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: radarr-config-pvc
-  namespace: media
+  namespace: downloader
 spec:
   accessModes:
     - ReadWriteOnce
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prowlarr-config-pvc
-  namespace: media
+  namespace: downloader
 spec:
   accessModes:
     - ReadWriteOnce
