--- a/configs/downloader/radarr.yaml
+++ b/configs/downloader/radarr.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: radarr
-  namespace: media
+  namespace: downloader
 spec:
   replicas: 1
   selector:
@@ -58,7 +58,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: radarr
-  namespace: media
+  namespace: downloader
   labels:
     app: radarr
 spec:
