--- a/configs/downloader/service.yaml
+++ b/configs/downloader/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: radarr-server-lb
-  namespace: media
+  namespace: downloader
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "radarr.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: radarr
-  namespace: media
+  namespace: downloader
   labels:
     app: radarr
 spec:
@@ -41,7 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonarr-server-lb
-  namespace: media
+  namespace: downloader
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "sonarr.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
@@ -61,7 +61,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonarr
-  namespace: media
+  namespace: downloader
   labels:
     app: sonarr
 spec:
@@ -79,7 +79,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prowlarr-server-lb
-  namespace: media
+  namespace: downloader
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "prowlarr.home"
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
@@ -99,7 +99,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prowlarr
-  namespace: media
+  namespace: downloader
   labels:
     app: prowlarr
 spec:
