--- a/configs/downloader/sonarr.yaml
+++ b/configs/downloader/sonarr.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sonarr
-  namespace: media
+  namespace: downloader
 spec:
   replicas: 1
   selector:
@@ -66,7 +66,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonarr
-  namespace: media
+  namespace: downloader
   labels:
     app: sonarr
 spec:
