--- a/configs/downloader/ingress.yaml
+++ b/configs/downloader/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: radarr
-  namespace: downloader
+  namespace: media
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     kubernetes.io/ingress.class: "traefik"
@@ -14,7 +14,6 @@ metadata:
     external-dns.alpha.kubernetes.io/ttl: "60"
     traefik.ingress.kubernetes.io/preserve-host: "true"
     traefik.ingress.kubernetes.io/pass-client-headers: "true"
-    traefik.ingress.kubernetes.io/request-timeout: "300s"
 spec:
   tls:
     - hosts:
@@ -36,7 +35,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sonarr
-  namespace: downloader
+  namespace: media
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     kubernetes.io/ingress.class: "traefik"
@@ -47,7 +46,6 @@ metadata:
     external-dns.alpha.kubernetes.io/ttl: "60"
     traefik.ingress.kubernetes.io/preserve-host: "true"
     traefik.ingress.kubernetes.io/pass-client-headers: "true"
-    traefik.ingress.kubernetes.io/request-timeout: "300s"
 spec:
   tls:
     - hosts:
@@ -69,7 +67,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prowlarr
-  namespace: downloader
+  namespace: media
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     kubernetes.io/ingress.class: "traefik"
@@ -80,7 +78,6 @@ metadata:
     external-dns.alpha.kubernetes.io/ttl: "60"
     traefik.ingress.kubernetes.io/preserve-host: "true"
     traefik.ingress.kubernetes.io/pass-client-headers: "true"
-    traefik.ingress.kubernetes.io/request-timeout: "300s"
 spec:
   tls:
     - hosts:
