--- a/configs/downloader/service.yaml
+++ b/configs/downloader/service.yaml
@@ -1,4 +1,4 @@
-# Radarr Services
+# Radarr LoadBalancer Service
 apiVersion: v1
 kind: Service
 metadata:
@@ -18,24 +18,8 @@ spec:
       name: https
   selector:
     app: radarr
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: radarr
-  namespace: downloader
-  labels:
-    app: radarr
-spec:
-  type: ClusterIP
-  ports:
-    - port: 7878
-      targetPort: 7878
-      name: web
-  selector:
-    app: radarr
 
-# Sonarr Services
+# Sonarr LoadBalancer Service
 ---
 apiVersion: v1
 kind: Service
@@ -56,24 +40,8 @@ spec:
       name: https
   selector:
     app: sonarr
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: sonarr
-  namespace: downloader
-  labels:
-    app: sonarr
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8989
-      targetPort: 8989
-      name: web
-  selector:
-    app: sonarr
 
-# Prowlarr Services
+# Prowlarr LoadBalancer Service
 ---
 apiVersion: v1
 kind: Service
@@ -92,21 +60,5 @@ spec:
     - port: 443
       targetPort: 9696
       name: https
-  selector:
-    app: prowlarr
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: prowlarr
-  namespace: downloader
-  labels:
-    app: prowlarr
-spec:
-  type: ClusterIP
-  ports:
-    - port: 9696
-      targetPort: 9696
-      name: web
   selector:
     app: prowlarr
