--- a/configs/downloader/service.yaml
+++ b/configs/downloader/service.yaml
@@ -18,7 +18,6 @@ spec:
       name: https
   selector:
     app: radarr
-
 # Sonarr LoadBalancer Service
 ---
 apiVersion: v1
@@ -40,7 +39,6 @@ spec:
       name: https
   selector:
     app: sonarr
-
 # Prowlarr LoadBalancer Service
 ---
 apiVersion: v1
@@ -62,3 +60,24 @@ spec:
       name: https
   selector:
     app: prowlarr
+# FlareSolverr LoadBalancer Service
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flaresolverr-server-lb
+  namespace: downloader
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "flaresolverr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8191
+      name: http
+    - port: 443
+      targetPort: 8191
+      name: https
+  selector:
+    app: flaresolverr
