--- a/configs/downloader/flaresolverr.yaml
+++ b/configs/downloader/flaresolverr.yaml
@@ -42,4 +42,29 @@ spec:
               cpu: 100m
               memory: 128Mi
             limits:
-              memory: 400Mi
+              memory: 512Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flaresolverr
+  namespace: downloader
+  labels:
+    app: flaresolverr
+spec:
+  type: ClusterIP
+  ports:
+    - port: 8191
+      targetPort: 8191
+      name: web
+      protocol: TCP
+    - port: 80
+      targetPort: 8191
+      name: http
+      protocol: TCP
+    - port: 443
+      targetPort: 8191
+      name: https
+      protocol: TCP
+  selector:
+    app: flaresolverr
