--- a/configs/tdx/kustomization.yaml
+++ b/configs/tdx/kustomization.yaml
@@ -2,7 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: tdx
 resources:
+  - namespace.yaml
   - configmap.yaml
-  - deployment.yaml
-  - service.yaml
-  - persistentvolumeclaim.yaml
+  - serviceaccount.yaml
+  - role.yaml
+  - rolebinding.yaml
+  - pvc.yaml
+  - deployment-teepod.yaml
+  - deployment-kms.yaml
+  - deployment-tproxy.yaml
+  - service-teepod.yaml
+  - service-kms.yaml
+  - service-tproxy.yaml
