--- a/configs/tdx-apps/covalidator.yaml
+++ b/configs/tdx-apps/covalidator.yaml
@@ -32,19 +32,30 @@ spec:
         - sh
         - -c
         - |
+          # Create config directory if it doesn't exist
+          mkdir -p /root/config
+          
+          # Copy the configmap contents to writable location
+          cp -f /tmp/config/* /root/config/
+          
+          # Copy other files
           cp -n /tmp/last-block/lastBlock.txt /root/lastBlock.txt
           cp -n /tmp/request-counter/requestCounter.txt /root/requestCounter.txt
+          
+          # Display for debugging
           ls -lrt /root/
+          ls -lrt /root/config/
+          
           echo "Environment setup completed successfully"
         volumeMounts:
         - name: storage
           mountPath: "/root"
+        - name: config
+          mountPath: "/tmp/config"
         - name: last-block
           mountPath: "/tmp/last-block"
         - name: request-counter
           mountPath: "/tmp/request-counter"
-        - name: config
-          mountPath: "/root/config"
         securityContext:
           allowPrivilegeEscalation: false
       containers:
@@ -62,9 +73,6 @@ spec:
         volumeMounts:
         - name: storage
           mountPath: "/root"
-        - name: config
-          mountPath: "/root/config"
-            #          subPath: "covalidator.toml"
         securityContext:
           allowPrivilegeEscalation: false
         env:
