--- a/configs/crossplane/tdx/tdx-kms.yaml
+++ b/configs/crossplane/tdx/tdx-kms.yaml
@@ -12,7 +12,8 @@ spec:
     name: gcp-provider
 ---
 # Create a KMS key for encryption/decryption
-apiVersion: kms.gcp.crossplane.io/v1alpha1
+# Add this to your tdx-kms.yaml file
+apiVersion: kms.gcp.crossplane.io/v1beta1
 kind: CryptoKey
 metadata:
   name: tdx-app-key
@@ -24,6 +25,8 @@ spec:
     purpose: ENCRYPT_DECRYPT
     versionTemplate:
       algorithm: GOOGLE_SYMMETRIC_ENCRYPTION
-      protectionLevel: HSM
+      protectionLevel: HSM  # Consider using HSM for higher security
+    # Add a rotation period if desired
+    rotationPeriod: 86400s # 90 days
   providerConfigRef:
     name: gcp-provider
