--- a/configs/tdx-apps/kustomize/kustomization.yaml
+++ b/configs/tdx-apps/kustomize/kustomization.yaml
@@ -2,8 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - serviceaccount.yaml
-  - covalidator.yaml
-  - configmaps.yaml
-  - pvc.yaml
+  #  - namespace.yaml
+  #  - serviceaccount.yaml
+  #  - covalidator.yaml
+  #  - configmaps.yaml
+  #  - pvc.yaml
