--- a/modules/applications/gcp/base-sepolia-covalidator.yaml
+++ b/modules/applications/gcp/base-sepolia-covalidator.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   project: apps
   source:
-    repoURL: https://github.com/your-org/tdx-apps.git
-    targetRevision: main
+    repoURL: https://github.com/amunt-0/argocd-apps
+    targetRevision: HEAD
     path: configs/tdx-apps/covalidator
     helm:
       valueFiles:
