--- a/configs/crossplane/tdx/templates/secrets.yaml
+++ b/configs/crossplane/tdx/templates/secrets.yaml
@@ -6,7 +6,7 @@ apiVersion: secretmanager.gcp.crossplane.io/v1beta1
 kind: Secret
 metadata:
   name: {{ .name }}-covalidator-secret
-  namespace: crossplane-system
+  namespace: crossplane
 spec:
   forProvider:
     replication:
@@ -20,7 +20,7 @@ apiVersion: kms.gcp.crossplane.io/v1beta1
 kind: CryptoKey
 metadata:
   name: {{ .name }}-covalidator-key
-  namespace: crossplane-system
+  namespace: crossplane
 spec:
   forProvider:
     keyRingRef:
