--- a/configs/crossplane/provider.yaml
+++ b/configs/crossplane/provider.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   package: crossplane/provider-gcp:master
 ---
-apiVersion: gcp.crossplane.io/v1
+apiVersion: gcp.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: gcp-provider
