feat: add crossplane for ingress

--- a/configs/downloader/pvc.yaml
+++ b/configs/downloader/pvc.yaml
@@ -33,3 +33,15 @@ spec:
   resources:
     requests:
       storage: 500Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jackett-config-pvc
+  namespace: downloader
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 300Mi
