feat: add jacket

--- a/configs/downloader/radarr.yaml
+++ b/configs/downloader/radarr.yaml
@@ -48,7 +48,7 @@ spec:
           persistentVolumeClaim:
             claimName: radarr-config-pvc
         - name: downloads
-          hostPaht:
+          hostPath:
             path: /mnt/ssd/downloads
             type: Directory
         - name: movies
