--- a/configs/downloader/sonarr.yaml
+++ b/configs/downloader/sonarr.yaml
@@ -1,3 +1,7 @@
+#!/bin/bash
+
+# Save the fixed Sonarr deployment
+cat > ./fixed-sonarr.yaml << 'EOF'
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -37,7 +41,6 @@ spec:
               mountPath: /downloads
             - name: series
               mountPath: /tv
-            # Add read access to movies for cross-reference
             - name: movies
               mountPath: /movies
               readOnly: true
