--- a/configs/downloader/jackett.yaml
+++ b/configs/downloader/jackett.yaml
@@ -53,3 +53,77 @@ spec:
           hostPath:
             path: /mnt/ssd/downloads
             type: Directory
+
+              
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jackett
+  namespace: downloader
+  labels:
+    app: jackett
+spec:
+  type: ClusterIP
+  ports:
+    - port: 9117
+      targetPort: 9117
+      protocol: TCP
+      name: web
+  selector:
+    app: jackett
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jackett-server-lb
+  namespace: downloader
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "jackett.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 9117
+      name: http
+    - port: 443
+      targetPort: 9117
+      name: https
+  selector:
+    app: jackett
+
+
+---
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: jackett
+  namespace: downloader
+  annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
+    kubernetes.io/ingress.class: "traefik"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    external-dns.alpha.kubernetes.io/enabled: "true"
+    external-dns.alpha.kubernetes.io/hostname: "jackett.home"
+    external-dns.alpha.kubernetes.io/ttl: "60"
+    traefik.ingress.kubernetes.io/preserve-host: "true"
+    traefik.ingress.kubernetes.io/pass-client-headers: "true"
+spec:
+  tls:
+    - hosts:
+        - jackett.home
+      secretName: jackett-tls
+  rules:
+    - host: jackett.home
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: jackett
+                port:
+                  number: 9117
