--- a/configs/downloader/prowlarr.yaml
+++ b/configs/downloader/prowlarr.yaml
@@ -59,3 +59,55 @@ spec:
       name: web
   selector:
     app: prowlarr
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prowlarr-server-lb
+  namespace: downloader
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "prowlarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 9696
+      name: http
+    - port: 443
+      targetPort: 9696
+      name: https
+  selector:
+    app: prowlarr
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: prowlarr
+  namespace: media
+  annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
+    kubernetes.io/ingress.class: "traefik"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    external-dns.alpha.kubernetes.io/enabled: "true"
+    external-dns.alpha.kubernetes.io/hostname: "prowlarr.home"
+    external-dns.alpha.kubernetes.io/ttl: "60"
+    traefik.ingress.kubernetes.io/preserve-host: "true"
+    traefik.ingress.kubernetes.io/pass-client-headers: "true"
+spec:
+  tls:
+    - hosts:
+        - prowlarr.home
+      secretName: prowlarr-tls
+  rules:
+    - host: prowlarr.home
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: prowlarr
+                port:
+                  number: 9696    
