--- a/configs/downloader/radarr.yaml
+++ b/configs/downloader/radarr.yaml
@@ -71,3 +71,59 @@ spec:
       name: web
   selector:
     app: radarr
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: radarr-server-lb
+  namespace: downloader
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "radarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 7878
+      name: http
+    - port: 443
+      targetPort: 7878
+      name: https
+  selector:
+    app: radarr
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: radarr
+  namespace: media
+  annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
+    kubernetes.io/ingress.class: "traefik"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    external-dns.alpha.kubernetes.io/enabled: "true"
+    external-dns.alpha.kubernetes.io/hostname: "radarr.home"
+    external-dns.alpha.kubernetes.io/ttl: "60"
+    traefik.ingress.kubernetes.io/preserve-host: "true"
+    traefik.ingress.kubernetes.io/pass-client-headers: "true"
+spec:
+  tls:
+    - hosts:
+        - radarr.home
+      secretName: radarr-tls
+  rules:
+    - host: radarr.home
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: radarr
+                port:
+                  number: 7878
+
+
+
