--- a/configs/downloader/sonarr.yaml
+++ b/configs/downloader/sonarr.yaml
@@ -75,3 +75,57 @@ spec:
       name: web
   selector:
     app: sonarr
+---
+# Sonarr LoadBalancer Service
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sonarr-server-lb
+  namespace: downloader
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "sonarr.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8989
+      name: http
+    - port: 443
+      targetPort: 8989
+      name: https
+  selector:
+    app: sonarr
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: sonarr
+  namespace: media
+  annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
+    kubernetes.io/ingress.class: "traefik"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    external-dns.alpha.kubernetes.io/enabled: "true"
+    external-dns.alpha.kubernetes.io/hostname: "sonarr.home"
+    external-dns.alpha.kubernetes.io/ttl: "60"
+    traefik.ingress.kubernetes.io/preserve-host: "true"
+    traefik.ingress.kubernetes.io/pass-client-headers: "true"
+spec:
+  tls:
+    - hosts:
+        - sonarr.home
+      secretName: sonarr-tls
+  rules:
+    - host: sonarr.home
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: sonarr
+                port:
+                  number: 8989    
