--- a/configs/downloader/sonarr.yaml
+++ b/configs/downloader/sonarr.yaml
@@ -77,7 +77,6 @@ spec:
     app: sonarr
 ---
 # Sonarr LoadBalancer Service
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -102,7 +101,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sonarr
-  namespace: media
+  namespace: downloader
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     kubernetes.io/ingress.class: "traefik"
@@ -128,4 +127,4 @@ spec:
               service:
                 name: sonarr
                 port:
-                  number: 8989    
+                  number: 8989
