--- a/configs/downloader/radarr.yaml
+++ b/configs/downloader/radarr.yaml
@@ -50,11 +50,9 @@ spec:
         - name: downloads
           hostPath:
             path: /mnt/ssd/downloads
-            type: Directory
         - name: movies
           hostPath:
             path: /mnt/minio/movies
-            type: Directory
 ---
 apiVersion: v1
 kind: Service
@@ -91,13 +89,12 @@ spec:
       name: https
   selector:
     app: radarr
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: radarr
-  namespace: media
+  namespace: downloader
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
     kubernetes.io/ingress.class: "traefik"
@@ -124,6 +121,3 @@ spec:
                 name: radarr
                 port:
                   number: 7878
-
-
-
